# minimax-rs

./: AGENTS.md  Cargo.toml  NOTICE  PERFORMANCE.md  README.md
examples/: argmax_bench.rs  gguf_metadata.rs  gqa_bench.rs  kv_cache_bench.rs  layer_bench.rs  moe_kernel_bench.rs  moe_projection_check.rs  qkv_bench.rs  tp_collective_bench.rs  tp_layer_bench.rs  tp_process_layer_bench.rs  tp_process_model.rs
scripts/: bench.py  test-completion.sh  test-server.py  validate-ppl.py
src/: chat.rs  lib.rs  main.rs  model.rs  model_files.rs  sampling.rs  tensor_parallel.rs  tensor_parallel_model.rs  tensor_parallel_server.rs  tokenizer.rs  tp_reference.rs
tests/: gqa_prefill.rs  tp_collective.rs  tp_layer.rs  tp_loader.rs
tests/fixtures/: minimax-developer-prompt-request.json  minimax-developer-prompt.txt  minimax-tool-prompt-request.json  minimax-tool-prompt.txt
